Feat : 메인화면 관련 API 응답 수정
